--- a/api/api.csproj
+++ b/api/api.csproj
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fleck" Version="1.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Dapper" Version="2.1.28"/>
+    <PackageReference Include="JWT" Version="10.1.1"/>
+    <PackageReference Include="Npgsql" Version="8.0.1"/>
+    <PackageReference Include="Npgsql.DependencyInjection" Version="8.0.1"/>
+    <PackageReference Include="Serilog" Version="3.1.1"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1"/>
+    <PackageReference Include="uldahlalex.websocket.boilerplate" Version="1.5.0"/>
   </ItemGroup>
+
+
+
+
+
+
 
 </Project>
