--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   logging: ^1.2.0
   logging_appenders: ^1.2.0+1
   intl: ^0.19.0
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
